--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Coursera Page</title>
 </head>
 <body>
-<h1> this is the first page</h1>
+<h1> this is the first page. it is a graet fun</h1>
 </body>
 </html>
